--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,12 +29,11 @@ android {
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_11
+        targetCompatibility = JavaVersion.VERSION_11
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.glow_intel"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
@@ -46,8 +45,6 @@ android {
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
         }
     }
@@ -56,8 +53,20 @@ android {
 flutter {
     source = "../.."
 }
+
+// Dependencies block
 dependencies {
     // Add TensorFlow Lite dependency
-    implementation 'org.tensorflow:tensorflow-lite:2.16.1' // Adjust version as needed
+    implementation 'org.tensorflow:tensorflow-lite:2.8.0' // Use the latest version if possible
+
+    // If you need additional TensorFlow Lite packages, you can include them as follows:
+    // implementation 'org.tensorflow:tensorflow-lite-gpu:2.16.1' // For GPU support
+    // implementation 'org.tensorflow:tensorflow-lite-support:0.4.0' // For additional support features
+    implementation("com.google.android.material:material:<1.13.0-alpha07>")
+    	
     // Add other dependencies as needed
+}
+repositories {
+    google()
+    mavenCentral()
 }
